a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yanis_hattab/invalid2.min
#assign string to float type error


var x : int;
var y : float;
var s : string;

y = "test";

